--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ publishDir = "docs"
 
 	# Navigation
 	[params.navigation]
-		brand = "Hugo Creative Theme"
+		brand = "Agnieszka & Krzysztof - 1.09.2018"
 
 		[params.navigation.links]
 			about     = "Witamy/Welcome"
@@ -41,10 +41,9 @@ publishDir = "docs"
 
 	# Hero section
 	[params.hero]
-		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		slogan     = "Your awesome slogan"
-		subtitle   = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis nesciunt consequatur ut nihil voluptatem fugiat eos eveniet alias in veniam?"
-		buttonText = "Find out more"
+		slogan     = "Agnieszka & Krzysztof"
+		subtitle   = "1.09.2018"
+		buttonText = "Dowiedz się więcej/Find out more"
 
 
 	# About section
