--- a/config.toml
+++ b/config.toml
@@ -112,7 +112,7 @@ publishDir = "docs"
 		email_2 = "skrzynecki.krzysztof@gmail.com"
 
 	# Google Maps section
-	# [params.location]
-	# 	latitude  = "34.007850"
-	# 	longitude = "-118.499305"
-	# 	maps_api_key = ""
+	[params.location]
+		latitude  = "50.0433063"
+		longitude = "19.9477047"
+	 	maps_api_key = "AIzaSyCafl1K6zv-oGKOHpkpDLsxSx6eXvBvAXs"
