--- a/config.toml
+++ b/config.toml
@@ -59,44 +59,44 @@ publishDir = "docs"
 		link = "//rsvp.skrzyneckik.com"	
 
 	# Service section
-	[params.services]
-		headline = "At your service"
+	#[params.services]
+	#	headline = "At your service"
 
-        [[params.services.list]]
-            icon = "fa-diamond"
-            title = "Sturdy Templates"
-            description = "Our templates are updated regularly so they don't break."
+    #    [[params.services.list]]
+    #        icon = "fa-diamond"
+    #        title = "Sturdy Templates"
+    #        description = "Our templates are updated regularly so they don't break."
 
-        [[params.services.list]]
-			icon = "fa-paper-plane"
-			title = "Ready to Ship"
-			description = "You can use this theme as is, or you can make changes!"
+    #    [[params.services.list]]
+	#		icon = "fa-paper-plane"
+	#		title = "Ready to Ship"
+	#		description = "You can use this theme as is, or you can make changes!"
 
-		[[params.services.list]]
-            icon = "fa-newspaper-o"
-            title = "Up to Date"
-            description = "We update dependencies to keep things fresh."
+	#	[[params.services.list]]
+    #        icon = "fa-newspaper-o"
+    #        title = "Up to Date"
+    #        description = "We update dependencies to keep things fresh."
 
-        [[params.services.list]]
-            icon = "fa-heart"
-            title = "Made with Love"
-            description = "You have to make your websites with love these days!"
+    #    [[params.services.list]]
+    #        icon = "fa-heart"
+    #        title = "Made with Love"
+    #        description = "You have to make your websites with love these days!"
 
 
     # Portfolio modals
-	[params.portfolio.modal]
-        client = "Client"
-        date = "Date"
-        category = "Category"
-        buttonText = "Close"
+	#[params.portfolio.modal]
+    #   client = "Client"
+    #   date = "Date"
+    #   category = "Category"
+    #   buttonText = "Close"
 
     # Aside section
-	[params.aside]
-		headline = "Get the Creative Theme for Hugo"
+	#[params.aside]
+	#	headline = "Get the Creative Theme for Hugo"
 
-		[params.aside.button]
-			text = "Download now"
-			link = "//github.com/digitalcraftsman/hugo-creative-theme"
+	#	[params.aside.button]
+	#		text = "Download now"
+	#		link = "//github.com/digitalcraftsman/hugo-creative-theme"
 
 	# Contact section
 	[params.contact]
