Updated `about` section to redirect to polish version of google forms

--- a/config.toml
+++ b/config.toml
@@ -52,6 +52,7 @@ publishDir = "docs"
 		subheadline_pl    = "Serdecznie zapraszają na uroczystość zaślubin"
 		description_pl = "Sobota, 1 września 2018 o 16:00. Prosimy o potwierdzenie przybycia do 1 czerwca 2018"
 		buttonText_pl = "Potwierdź teraz!"
+		link_pl = "http://rsvp-pl.skrzyneckik.com"	
 		headline    = "Together with their families Agnieszka Suliga and Krzysztof Skrzynecki"
 		subheadline    = "Request the pleasure of your company to join the celebration of their wedding"
 		description = "Saturday, 1st of September 2018 at 16:00. Kindly respond by 1st of June 2018"
